-bug#0001335: <oid_index_parse> does not work as expected; requires changes to XML for e.g. EMC Cellera
-bug#0001349: Graphs with Multiple Data Template Items don't show all required non-templated fields
-bug#0001354: 0.8.7c to 0.8.8 update script bugs
-bug#0001359: Better error checking in rrd.php
-bug#0001366: Exported data templates do not import the special characters properly
-bug#0001428: segfault when database tables not present
-bug#0001429: PHP does not support SNMP V3 Contexts and Cacti needs to act accordingly
-bug#0001432: array_merge breaks dropdown handling with hardcoded (array-)keys
-bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String", When Import Template 
-bug#0001461: (Data Query) Export/Import fails
-bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
-bug#0001506: Reindexing fails in snmp.php
-bug#0001508: More min-height'ed divs when showing graphs 
-bug#0001522: Special(?) charakters break parsing of template data.
-bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
-bug#0001532: Various crashes in early stages of installation with no database populated.
-bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes 
-bug#0001549: Database crashes with use of array_to_sql_or
-bug#0001557: Quotes in Text Format graph template field breaks graph
-bug#0001580: Extra newline in api_automation_tools.php breaks custom scripts
-bug#0001600: Default action on lists should be "None" 
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Remove call pass by reference from function declarations
-bug: When creating new graphs without a data source, print error to user instead of throwing php error